# openbook

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  DEPLOYMENT.md  HACKING.md  PLANNING.md  README.md  delete_pycache.sh  eslint.config.js  package-lock.json  package.json  pyproject.toml  renovate.json  tox.ini  tsconfig.base.json  tsconfig.nodejs.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  dependency_request.md  epic.md  feature_request.md  other.md
.github/actions/checkout-source-tree/: action.yml
.github/actions/generate-project-sbom/: action.yml
.github/actions/setup-ci-environment/: action.yml
.github/prompts/: Feature Request.prompt.md  Improve Clarity.prompt.md  Other Issue.prompt.md  Unit Test for Model.prompt.md  Unit Test for ViewSet.prompt.md
.github/workflows/: dependencies-monthly-major.yml  dependencies-weekly-minor.yml  dependencies-weekly.yml  pr-checks.yml  refresh-sbom.yml  renovate-major.yml  renovate-minor.yml  renovate-pr-checks.yml  renovate.yml  reusable-tests.yml  run-tests-dummy.yml  run-tests-full.yml  run-tests.yml
_docker/: Caddyfile  Dockerfile  docker-compose.yml  openbook.entrypoint.sh  openbook.local_settings.py  openbook_server.entrypoint.sh  openbook_server.local_settings.py
_docker/openbook/: Dockerfile  local_settings.py
_scripts/: _esbuild.js  all.js  esbuild-bundle.js
_scripts/frontend/: _options.js  build.js  clean.js  watch.js
_scripts/mock-saml-idp/: server.js
doc/: CHANGELOG.md  CONTRIBUTORS.md  DEPENDENCIES.md  HACKING.md  REPOSITORY-SETUP.md
doc/specs/django-allauth/: flows.md
doc/specs/django-allauth-headless-api/: account-management.md  api-principles.md  basic-login-logout.md  flows.md  social-login-saml.md
libraries/: .gitignore  README.md  package.json
libraries/core/: README.md  package.json  tsconfig.json
libraries/core/src/: index.less  index.ts
openbook/openbook/: settings.py  urls.py  wsgi.py
openbook/openbook/core/: apps.py  context_processors.py  views.py
openbook/openbook/library_manager/: apps.py
openbook_server/: README.md  manage.py
openbook_server/_media/: .gitignore
openbook_server/frontend/: package.json
openbook_server/frontend/website/: tsconfig.json
openbook_server/ob_library_manager/: apps.py  validators.py  views.py
openbook_server/ob_library_manager/admin/: __init__.py
openbook_server/ob_library_manager/migrations/: 0001_initial.py
openbook_server/ob_library_manager/models/: __init__.py  component.py  dependency.py  library.py  publication.py
openbook_server/openbook_server/: apps.py  asgi.py  context_processors.py  local_settings.py.template  settings.py  urls.py  views.py  wsgi.py
openbook_server/openbook_server/admin/: __init__.py  custom_site.py  file_uploads.py  language.py  site.py  user.py
openbook_server/openbook_server/frontend/: README.md  package.json
openbook_server/openbook_server/middleware/: __init__.py  current_user.py
openbook_server/openbook_server/migrations/: 0001_initial.py
openbook_server/openbook_server/models/: __init__.py  file_uploads.py  language.py  site.py
openbook_server/openbook_server/templatetags/: ob_file_extras.py
openbook_server/openbook_server/utils/: models.py
sbom/: openbook.cyclonedx.json
src/: README.md
src/_media/: .gitignore
src/frontend/: README.md  package.json
src/frontend/admin/: package.json
src/frontend/allauth/: .gitignore  package.json
src/frontend/app/: package.json
src/frontend/website/: CREDITS.md  package-lock.json  package.json
src/libraries/: README.md  package.json
src/libraries/core/: README.md  package.json  svelte.config.js
src/libraries/ls-compat/: README.md  (+1 more)
src/openbook/: admin.py  admin.py.OLD  apps.py  asgi.py  drf.py  local_settings.py.template  settings.py  test.py  urls.py
(+604 files in other folders)
