[tool.poetry]
name = "openbook"
version = "0.1.0"
description = "OpenBook: Interactive Online Textbooks"
authors = ["Dennis Schulmeister-Zimolong <dennis@wpvs.de>"]
homepage = "https://openbook.studio"
repository = "https://github.com/DennisSchulmeister/openbook"
license = "AGPL-3.0"
readme = "README.md"

# Use poetry for dependency management but not for packaging, since at least
# for now we are not publishing a python packages on PyPI. Maybe we want to do
# in future, in which case we need to reconsider some of the project structure.
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
channels = {extras = ["daphne"], version = "^4.1.0"}
pyyaml = "^6.0.1"
pillow = "^10.3.0"
markdown = "^3.6"
channels-redis = "^4.2.0"
semver = "^3.0.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
