[tool.poetry]
name = "openbook"
version = "0.1.0"
description = "OpenBook: Interactive Online Textbooks"
authors = ["Dennis Schulmeister-Zimolong <dennis@wpvs.de>"]
homepage = "https://openbook.studio"
repository = "https://github.com/DennisSchulmeister/openbook"
license = "AGPL-3.0"
readme = "README.md"

# Use poetry for dependency management but not for packaging, since at least
# for now we are not publishing a python packages on PyPI. Maybe we want to do
# in future, in which case we need to reconsider some of the project structure.
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2.2"
channels = {extras = ["daphne"], version = "^4.2.2"}
pyyaml = "^6.0.2"
pillow = "^11.2.1"
markdown = "^3.8"
channels-redis = "^4.2.1"
semver = "^3.0.4"
djangorestframework = "^3.16.0"
pygments = "^2.19.1"
django-filter = "^25.1"
daphne = "^4.2.0"
twisted = {extras = ["http2", "tls"], version = "^25.5.0"}
django-unfold = "^0.59.0"
django-extensions = "^4.1"
django-dbbackup = "^4.3.0"
django-import-export = {extras = ["all"], version = "^4.3.7"}
djangoql = "^0.18.1"
django-colorfield = "^0.14.0"
drf-restwind = "^0.2.4"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
django-cleanup = "^9.0.0"
drf-flex-fields = "^1.0.2"
django-allauth = {extras = ["saml", "socialaccount"], version = "^65.9.0"}
django-debug-toolbar = "^5.2.0"
django-crispy-forms = "^2.4"

[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
